# escrow

./: .gitignore  .typos.toml  Cargo.toml  LICENSE  README.md  UPGRADE_NOTES.md
backend/fedimint/: escrow_client.py  oracle_listener.py  test_escrow_client.py  test_oracle_listener.py
docs/: 00_PROJECT_OVERVIEW.md  06_PHASE_5_INTEGRATION.md  EXIT:  TODO.md
escrow-httpd/: Cargo.toml
escrow-httpd/src/: main.rs
fedimint-cli/: Cargo.toml
fedimint-escrow-client/: Cargo.toml
fedimint-escrow-client/src/: api.rs  cli.rs  lib.rs  states.rs
fedimint-escrow-common/: Cargo.toml
fedimint-escrow-common/src/: config.rs  endpoints.rs  lib.rs  oracle.rs
fedimint-escrow-server/: Cargo.toml
fedimint-escrow-server/src/: db.rs  lib.rs  oracle.rs  tests.rs
fedimintd/: Cargo.toml
fedimintd/src/: fedimintd.rs
misc/: mprocs.yaml
scripts/dev/: aliases.sh  e2e-delegated-happy-path.sh  e2e-dispute-flow.sh  e2e-happy-path.sh  e2e-timeout-path.sh  launch-devimint.sh  run-all-e2e.sh  run-e2e.sh  user-shell.sh
tools/: oracle_sign.py
