[workspace]
members = [
    "fedimintd",
    "fedimint-cli",
    "fedimint-escrow-common",
    "fedimint-escrow-client",
    "fedimint-escrow-server",
    "tests",
]
resolver = "2"

[workspace.metadata]
authors = ["The Fedimint Developers"]
edition = "2021"
description = "Fedimint escrow custom module"
license = "MIT"

[workspace.dependencies]
# Use local fedimint checkout (v0.11.0-alpha)
fedimintd = { path = "../fedimint/fedimintd" }
fedimint-cli = { path = "../fedimint/fedimint-cli" }
fedimint-core = { path = "../fedimint/fedimint-core" }
fedimint-client = { path = "../fedimint/fedimint-client" }
fedimint-logging = { path = "../fedimint/fedimint-logging" }
fedimint-server = { path = "../fedimint/fedimint-server" }
fedimint-server-core = { path = "../fedimint/fedimint-server-core" }
fedimint-client-module = { path = "../fedimint/fedimint-client-module" }
fedimint-api-client = { path = "../fedimint/fedimint-api-client" }
fedimint-testing = { path = "../fedimint/fedimint-testing" }
devimint = { path = "../fedimint/devimint" }
aead = { path = "../fedimint/crypto/aead" }
tbs = { path = "../fedimint/crypto/tbs" }
threshold_crypto = { git = "https://github.com/fedimint/threshold_crypto" }
async-trait = "0.1.73"
bitcoin = { version = "0.32.6", features = ["rand-std"] }
secp256k1 = { version = "0.29.0", features = ["rand", "serde", "rand-std"] }
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "1.0.39"
futures = "0.3.30"
anyhow = "1.0.66"
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive"] }
erased-serde = "0.4"
tracing = "0.1.37"
sha2 = "0.10.8"

[profile.dev]
split-debuginfo = "packed"

[profile.dev.package]
secp256k1 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
bitcoin_hashes = { opt-level = 3 }
rand_core = { opt-level = 3 }
tikv-jemalloc-sys = { opt-level = 3 }
tikv-jemallocator = { opt-level = 3 }
