[package]
name = "escrow-httpd"
version = "0.3.0"
edition = "2021"
description = "Persistent HTTP daemon for the Fedimint escrow module"
license = "MIT"

[[bin]]
name = "escrow-httpd"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = "0.8.4"
clap = { version = "4.5.8", features = ["derive", "env"] }
fedimint-bip39 = { path = "../../fedimint/fedimint-bip39" }
fedimint-client = { workspace = true }
fedimint-client-module = { workspace = true }
fedimint-connectors = { path = "../../fedimint/fedimint-connectors" }
fedimint-core = { workspace = true }
fedimint-derive-secret = { path = "../../fedimint/crypto/derive-secret" }
fedimint-escrow-client = { path = "../fedimint-escrow-client" }
fedimint-escrow-common = { path = "../fedimint-escrow-common" }
fedimint-ln-client = { workspace = true }
fedimint-ln-common = { workspace = true }
fedimint-logging = { path = "../../fedimint/fedimint-logging" }
fedimint-mint-client = { path = "../../fedimint/modules/fedimint-mint-client" }
fedimint-rocksdb = { path = "../../fedimint/fedimint-rocksdb" }
fedimint-wallet-client = { path = "../../fedimint/modules/fedimint-wallet-client" }
futures = { workspace = true }
hex = "0.4"
lightning-invoice = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
sha2 = { workspace = true }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = { workspace = true }

[build-dependencies]
fedimint-build = { path = "../../fedimint/fedimint-build" }
