[package]
name = "fedimint-escrow-client"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "Client-side logic for the Fedimint escrow module"
license = "MIT"

[lib]
name = "fedimint_escrow_client"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
fedimint-escrow-common ={ path = "../fedimint-escrow-common" }
fedimint-escrow-server = { path = "../fedimint-escrow-server" }
fedimint-client = { workspace = true }
fedimint-client-module = { workspace = true }
fedimint-ln-client = { workspace = true }
fedimint-ln-common = { workspace = true }
lightning-invoice = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-core ={ workspace = true }
futures = { workspace = true }
erased-serde = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
threshold_crypto = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
serde_json = "1.0.120"
rust_decimal = "1.35"
random-string = "1.1.0"
async-stream = "0.3.5"
tokio = { workspace = true }
clap = { version = "4.5.8", features = ["derive"] }

[build-dependencies]
fedimint-build = { path = "../../fedimint/fedimint-build" }

[features]
default =[]
cli = []